src/objects/Login__c.object
<CustomObject>
    <description>Custom object to house Rainmaker login information</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001Rp8zEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Login_URL__c</fullName>
        <description>&quot;https://www.salesforce.com/login.jsp?pw=&quot;&amp;Password__c&amp;&quot;&amp;un=&quot;&amp;Username__c</description>
        <formula>IF(
   Non_SFDC_Login__c  &lt;&gt; TRUE,
    IF(
       Sandbox_Login__c = TRUE,
       &quot;https://test.salesforce.com/?pw=&quot;&amp;Password__c&amp;&quot;&amp;un=&quot;&amp;Username__c,
       &quot;https://www.salesforce.com/login.jsp?pw=&quot;&amp;Password__c&amp;&quot;&amp;un=&quot;&amp;Username__c),&quot;&quot;
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Login URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Login__c</fullName>
        <label>Company Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is used when a client deactivates a &quot;rainmakeradmin&quot; username.  Please do not use this when a password changes.  In that instance, simply change the password field on the existing record.</inlineHelpText>
        <label>Login Inactive (see Help text)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_SFDC_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a login for a non-SFDC system.</description>
        <label>Non-SFDC Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This ID can be found by going to Setup | Company Profile | Company Information</inlineHelpText>
        <label>Org ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Login__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sandbox_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if these credentials are for a sandbox.</inlineHelpText>
        <label>Sandbox Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Answer__c</fullName>
        <label>Security Answer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Token__c</fullName>
        <label>Security Token</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Username for login information</description>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Login</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I30000000E5luEAC_00Na0000009jCbKEAU</fullName>
        <active>true</active>
        <field>Work_Order__c.Sandbox_Login__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Login__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Login__c.Sandbox_Login__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Work Order_Sandbox Login</name>
        <sourceObject>Work_Order__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000000E5luEAC_00Na0000009jCbeEAE</fullName>
        <active>true</active>
        <field>Work_Order__c.Production_Login__c</field>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Login__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Login__c.Primary_Login__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Login__c.Sandbox_Login__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Work Order_Production Login</name>
        <sourceObject>Work_Order__c</sourceObject>
    </namedFilters>
    <pluralLabel>Logins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>